# fortune-city

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  docker-compose.prod.yml  docker-compose.yml  package.json  panel.sh  pnpm-lock.yaml
apps/api/: .env.example  Dockerfile  eslint.config.mjs  nest-cli.json  package.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  main.ts
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/messages/: en.json  ru.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: useDepositsSocket.tsx  useFeedback.ts  useInterval.ts  useNotificationsSocket.tsx  useTelegramBackButton.ts  useWheelSocket.tsx
apps/web/src/i18n/: config.ts  index.ts  request.ts  routing.ts
apps/web/src/lib/: api.ts  mobile-detect.ts  referral.ts  socket.ts  supabase.ts  utils.ts
apps/web/src/providers/: SolanaWalletProvider.tsx  TelegramProvider.tsx
apps/web/src/stores/: auth.store.ts  ui.store.ts  (+11 more)
contracts/treasury-vault/: Anchor.toml  Cargo.toml  DEPLOY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_RU.md  fix-edition2024.sh  package-lock.json
contracts/treasury-vault/docs/: edition2024-fix.md
contracts/treasury-vault/programs/treasury-vault/: Cargo.toml
contracts/treasury-vault/programs/treasury-vault/src/: errors.rs  events.rs  lib.rs  state.rs
contracts/treasury-vault/programs/treasury-vault/src/instructions/: cancel_withdrawal.rs  claim_withdrawal.rs  create_withdrawal.rs  deposit.rs  initialize.rs  mod.rs  payout.rs  set_paused.rs
contracts/treasury-vault/scripts/: devnet-test.ts
contracts/treasury-vault/tests/: treasury-vault.ts
docs/: ADMIN_PANEL_PLAN.md  DEPOSITS_ARCHITECTURE.md  DEVELOPMENT_PLAN.md  PROGRESS.md  WITHDRAWAL_IMPLEMENTATION.md  concept.md  economy-v3-redesign.md  fame-system.md  math.md  prelaunch.md  trustless-vault-v2.md
nginx/: fortune.conf
scripts/: server-setup.sh
(+280 files in other folders)
