[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin blake3 to version compatible with platform-tools rustc 1.84
blake3 = "=1.8.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
