[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
# Pin blake3 to version compatible with platform-tools rustc 1.84
blake3 = "=1.8.2"

[profile.release]
opt-level = "z"          # Optimize for size (not speed)
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Single codegen unit — better optimization
overflow-checks = false  # Save ~4KB, we use checked_add explicitly
strip = true             # Strip symbols from binary
panic = "abort"          # Abort instead of unwind — saves ~20KB

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
